--- a/XHTML/alternative.css
+++ b/XHTML/alternative.css
@@ -11,8 +11,9 @@ body {
 }
 
 #menu {
-	width: 960px; 
-	height: 100px;
+	width: auto;
+	max-width: 960px;
+	height: auto;
 	background-color: #FFFF99;
 	float: none;
 	position: relative;
